deploy/retrieveUnpackaged/objects/Partner_Satisfaction_Survey__c.object
<CustomObject>
    <description>Survey sent to Partners Via Clicktools</description>
    <fields>
        <fullName>Account__c</fullName>
        <inlineHelpText>Partner Account</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Satisfaction Surveys</relationshipLabel>
        <relationshipName>Partner_Satisfaction_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Areas_that_you_would_like_to_see_added__c</fullName>
        <inlineHelpText>Are there any areas that you would like to see added or improved upon within our Partner Network?</inlineHelpText>
        <label>Areas that you would like to see added?</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Brand_association__c</fullName>
        <inlineHelpText>Please mark on a scale of 1-10 how important the following benefits of the Rackspace Partner Network are to your organisation? 1 = not very important, 10 = very important.</inlineHelpText>
        <label>Brand association</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Completion_Date_and_Time__c</fullName>
        <inlineHelpText>Date and time that the survey was completed on</inlineHelpText>
        <label>Completion Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <inlineHelpText>Contact that the survey was sent to</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Partner Satisfaction Surveys</relationshipLabel>
        <relationshipName>Partner_Satisfaction_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Financial_Incentives__c</fullName>
        <inlineHelpText>Please mark on a scale of 1-10 how important the following benefits of the Rackspace Partner Network are to your organisation? 1 = not very important, 10 = very important.</inlineHelpText>
        <label>Financial Incentives</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hosting_based_projects_over_the__c</fullName>
        <inlineHelpText>How many hosting-based projects do you anticipate over the next 12 months?</inlineHelpText>
        <label>Hosting-based projects over 12 months?</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 or more</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_likely_are_you_to_recommend_us__c</fullName>
        <inlineHelpText>How likely are you to recommend Rackspace to your clients and/or prospects? 0 = definitely not, 10 = definitely</inlineHelpText>
        <label>How likely are you to recommend us?</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_often_should_we_contact_you__c</fullName>
        <inlineHelpText>How often would you like Rackspace to contact you with these updates?</inlineHelpText>
        <label>How often should we contact you?</label>
        <picklist>
            <picklistValues>
                <fullName>Once a month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1+ times a month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Once a year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Improvements_that_we_can_make__c</fullName>
        <inlineHelpText>What improvements could we make that would make you more likely to recommend Rackspace to your clients and/or prospects?</inlineHelpText>
        <label>Improvements that we can make?</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Joint_marketing__c</fullName>
        <inlineHelpText>Please mark on a scale of 1-10 how important the following benefits of the Rackspace Partner Network are to your organisation? 1 = not very important, 10 = very important.</inlineHelpText>
        <label>Joint marketing</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Important__c</fullName>
        <inlineHelpText>Please mark on a scale of 1-10 how important the following benefits of the Rackspace Partner Network are to your organisation?.</inlineHelpText>
        <label>Other Important Benefits</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Peace_of_Mind__c</fullName>
        <inlineHelpText>Please mark on a scale of 1-10 how important the following benefits of the Rackspace Partner Network are to your organisation? 1 = not very important, 10 = very important.</inlineHelpText>
        <label>Peace of Mind</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reciprocal_referrals__c</fullName>
        <inlineHelpText>Please mark on a scale of 1-10 how important the following benefits of the Rackspace Partner Network are to your organisation? 1 = not very important, 10 = very important.</inlineHelpText>
        <label>Reciprocal referrals</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Services_that_you_d_like_to_hear_about__c</fullName>
        <inlineHelpText>Which of the following services would you like to hear about? (Please select all that apply.)</inlineHelpText>
        <label>Services that you&apos;d like to hear about</label>
        <picklist>
            <picklistValues>
                <fullName>Email services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virtualisation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platform hosting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SharePoint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCI Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disaster Recovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>What_is_your_preferred_method_of_contact__c</fullName>
        <inlineHelpText>What is your preferred method of contact for Rackspace updates? (Please select all that apply.)</inlineHelpText>
        <label>What is your preferred method of contact</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newsletters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meetings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Partner Satisfaction Survey</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Partner Satisfaction Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Satisfaction Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>